--- a/Trello/Semana2/login.css
+++ b/Trello/Semana2/login.css
@@ -14,7 +14,7 @@ body {
 .email input, .senha input {
     border-radius: 10px;
     border: none;
-    width: 240px;
+    width: 300px;
     height: 40px;
     margin-top: 15px;
     background-color: rgb(252, 182, 211);
@@ -29,8 +29,16 @@ body {
     background-color: deeppink;
     color: white;
     cursor: pointer;
-    margin-top: 15px;
+    margin-top: 20px;
     border-radius: 15px;
     width: 120px;
     height: 40px;
+}
+
+.caixa {
+    margin-top: 150px;
+}
+
+.caixa img {
+    max-width: 300px;
 }
