--- a/Trello/MiniProjeto-Semana7/assets/styleTema.css
+++ b/Trello/MiniProjeto-Semana7/assets/styleTema.css
@@ -9,7 +9,7 @@
 body.pau-brasil {
     --primary-color: #D32F2F;
     --secondary-color: #B71C1C;
-    --background-color: #FFEBEE;
+    --background-color: #fb9caa;
     --text-color: #212121;
     --accent-color: #EF9A9A;
 }
@@ -17,7 +17,7 @@ body.pau-brasil {
 body.castanheira {
     --primary-color: #795548;
     --secondary-color: #5D4037;
-    --background-color: #EFEBE9;
+    --background-color: #a3796a;
     --text-color: #212121;
     --accent-color: #A1887F;
 }
@@ -25,7 +25,7 @@ body.castanheira {
 body.peroba-rosa {
     --primary-color: #E91E63;
     --secondary-color: #C2185B;
-    --background-color: #FCE4EC;
+    --background-color: #f78baf;
     --text-color: #212121;
     --accent-color: #F48FB1;
 }
