--- a/Trello/MiniProjeto-Semana7/cadastroUsuario/styleCadastro.css
+++ b/Trello/MiniProjeto-Semana7/cadastroUsuario/styleCadastro.css
@@ -4,7 +4,7 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: var(--background-color);
+    background: linear-gradient(120deg, #84fab0, #8fd3f4);
     color: var(--text-color);
     transition: all 0.3s ease;
 }
