--- a/Trello/Semana8/cardapioDigital/src/App.css
+++ b/Trello/Semana8/cardapioDigital/src/App.css
@@ -12,6 +12,7 @@ html, body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #f8f9fa;
+  overflow-x: hidden;
 }
 
 #root {
@@ -22,6 +23,8 @@ html, body {
 .App {
   min-height: 100vh;
   background-color: #f8f9fa;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 html {
