--- a/Trello/Semana8/cardapioDigital/src/components/Menu/Menu.css
+++ b/Trello/Semana8/cardapioDigital/src/components/Menu/Menu.css
@@ -6,7 +6,7 @@
   top: 0;
   left: 0;
   right: 0;
-  z-index: 1000;
+  z-index: 9999;
   width: 100%;
 }
 
@@ -54,6 +54,8 @@
   border: none;
   cursor: pointer;
   font-family: inherit;
+  display: inline-block;
+  width: auto;
 }
 
 .menu-link:hover {
